[package]
name = "cql"
version = "0.1.0"
authors = ["Jerry Peng <pr2jerry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
cdrs = "2"
clap = "2"
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
futures-preview = "=0.3.0-alpha.17"
uuid = "0.7"
bigdecimal = "0.1"
colored_json = "2"
ansi_term = "0.11"
