[package]
name = "kass"
description = "Cassandra CLI multi-partition query runner"
repository = "https://github.com/jerrypnz/kass"
categories = ["command-line-utilities", "database"]
keywords = ["cassandra", "cql"]
readme = "./README.md"
license = "Apache-2.0"
version = "0.1.0"
authors = ["Jerry Peng <pr2jerry@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.8"
cdrs = "2"
clap = "2"
serde_json = { version = "1", features = ["preserve_order"] }
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = "0.8"
bigdecimal = "0.1"
colored_json = "2"
ansi_term = "0.12"
lazy_static = "1"
regex = "1"
